@@ -72,6 +72,12 @@ base dc=padl,dc=com
 # service.
 #pam_crypt local
 
+# Search timelimit
+#timelimit 30
+
+# Bind timelimit
+#bind_timelimit 30
+
 # RFC2307bis naming contexts
 #nss_base_passwd	ou=People,dc=padl,dc=com
 #nss_base_shadow	ou=People,dc=padl,dc=com
